@@ -1,3 +1,8 @@
+2014-06-19  Dominique Dumont  <domi.dumont@free.fr> v0.117
+
+    * experience config attribute is deprecated
+     (Closes Debian #750339)
+
 2014-04-03  Dominique Dumont  <domi.dumont@free.fr> v0.116
 
     * Added missing build require on Test::Differences
